-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.7.0 Beta1
-
None
-
Linux muslc
-
-
72ee1df26 (dev), 59b323260 (6.7)
I am experiencing this compile error that 6.6.0 does not have.
[246/647] Building CXX object src/corelib/CMakeFiles/Core.dir/io/qstorageinfo.cpp.o FAILED: src/corelib/CMakeFiles/Core.dir/io/qstorageinfo.cpp.o /root/qbt-build/bin/arm-linux-musleabihf-g++ -DPCRE2_CODE_UNIT_WIDTH=16 -DQT_ASCII_CAST_WARNINGS -DQT_BUILDING_QT -DQT_BUILD_CORE_LIB -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_UP_TO=0x050000 -DQT_EXPLICIT_QFILE_CONSTRUCTION_FROM_PATH -DQT_LEAN_HEADERS=1 -DQT_MOC_COMPAT -DQT_NO_AS_CONST -DQT_NO_CAST_TO_ASCII -DQT_NO_CONTEXTLESS_CONNECT -DQT_NO_DEBUG -DQT_NO_FOREACH -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_NO_QEXCHANGE -DQT_NO_USING_NAMESPACE -DQT_TYPESAFE_FLAGS -DQT_USE_QSTRINGBUILDER -DQT_WARN_DEPRECATED_UP_TO=0x070000 -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -I/root/qbt-build/qtbase/build/src/corelib/Core_autogen/include -I/root/qbt-build/qtbase/build/include -I/root/qbt-build/qtbase/build/include/QtCore -I/root/qbt-build/qtbase/src/corelib -I/root/qbt-build/qtbase/build/src/corelib -I/root/qbt-build/qtbase/build/src/corelib/global -I/root/qbt-build/qtbase/build/src/corelib/kernel -I/root/qbt-build/qtbase/src/corelib/../3rdparty/tinycbor/src -I/root/qbt-build/qtbase/build/include/QtCore/6.7.0 -I/root/qbt-build/qtbase/build/include/QtCore/6.7.0/QtCore -I/root/qbt-build/qtbase/src/corelib/../3rdparty/forkfd -I/root/qbt-build/qtbase/build/src/corelib/.rcc -I/root/qbt-build/qtbase/mkspecs/linux-g++ -I/root/qbt-build/qtbase/src/3rdparty/pcre2/src -std=c++17 -static -w -Wno-psabi -I/root/qbt-build/include -DNDEBUG -O3 -std=c++17 -fPIC -fvisibility=hidden -fvisibility-inlines-hidden -Wall -Wextra -fexceptions -ffunction-sections -fdata-sections -Wsuggest-override -Winvalid-pch -include /root/qbt-build/qtbase/build/src/corelib/CMakeFiles/Core.dir/cmake_pch.hxx -MD -MT src/corelib/CMakeFiles/Core.dir/io/qstorageinfo.cpp.o -MF src/corelib/CMakeFiles/Core.dir/io/qstorageinfo.cpp.o.d -o src/corelib/CMakeFiles/Core.dir/io/qstorageinfo.cpp.o -c /root/qbt-build/qtbase/src/corelib/io/qstorageinfo.cpp In file included from /root/qbt-build/qtbase/src/corelib/io/qstorageinfo.cpp:6: /root/qbt-build/qtbase/src/corelib/io/qstorageinfo_p.h:68:9: error: ‘dev_t’ does not name a type; did you mean ‘div_t’? 68 | dev_t stDev = 0; | ^~~~~ | div_t [247/647] Building CXX object src/corelib/CMakeFiles/Core.dir/io/qstandardpaths.cpp.o [248/647] Building CXX object src/corelib/CMakeFiles/Core.dir/io/qloggingregistry.cpp.o [249/647] Building CXX object src/corelib/CMakeFiles/Core.dir/io/qtemporarydir.cpp.o [250/647] Building CXX object src/corelib/CMakeFiles/Core.dir/io/qresource.cpp.o [251/647] Building CXX object src/corelib/CMakeFiles/Core.dir/io/qtemporaryfile.cpp.o ninja: build stopped: subcommand failed. ⬤ Error: The build command produced an exit code greater than 0 - Check the logs Error: Process completed with exit code 1.
Full build info in text.
- is duplicated by
-
QTBUG-120767 qstorageinfo.cpp compile error 6.7.0-beta1
-
- Closed
-
For Gerrit Dashboard: QTBUG-120766 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
530771,5 | Add sys/types.h include to fix build with musl | dev | qt/qtbase | Status: MERGED | +2 | 0 |
530950,2 | Add sys/types.h include to fix build with musl | 6.7 | qt/qtbase | Status: MERGED | +2 | 0 |