Add sys/types.h include to fix build with musl

This amends c82ed8b2795cbf6d82dfe3857fec7c16688137a4.

Pick-to: 6.7
Fixes: QTBUG-120766
Change-Id: I2584c62d35c6ee0a9c8687a476f7eab52bd52af2
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>